[package]
name = "rgcrt"
version = "0.1.0"
authors = ["Jacob Hughes <jh@jakehughes.uk>"]
edition = "2018"

[lib]
name = "gcrt"
path = "src/lib.rs"

[dependencies]
ykstackmaps = { git = "https://github.com/softdevteam/ykstackmaps" }

[dev-dependencies]
lazy_static = "1.3"
regex = "1.1"
termcolor = "1.0"
cargo_metadata = "0.7"
tempdir = "0.3"

[[test]]
name = "gc_tests"
path = "gc_tests/run.rs"
harness = false
